[gd_scene load_steps=5 format=3 uid="uid://ckvsl5kwd27nk"]

[ext_resource type="Script" path="res://TestMeleeEnemy.gd" id="1_8f1mu"]
[ext_resource type="Texture2D" uid="uid://jrrlpoybm1nd" path="res://icon.svg" id="2_0jqt5"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_g3g0f"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_8s2e5"]

[node name="MeleeEnemyTest" type="CharacterBody2D"]
collision_layer = 2
collision_mask = 12
slide_on_ceiling = false
script = ExtResource("1_8f1mu")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(3.5, 0.5)
shape = SubResource("RectangleShape2D_g3g0f")

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]
debug_enabled = true

[node name="VisionCone" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 9

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="VisionCone"]
scale = Vector2(1.93281, 0.809375)
polygon = PackedVector2Array(0, 0, 300, -600, 300, 600)

[node name="Hurtbox" type="Area2D" parent="."]
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hurtbox"]
position = Vector2(4, 1)
shape = SubResource("RectangleShape2D_8s2e5")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(3, 1)
scale = Vector2(0.15625, 0.160156)
texture = ExtResource("2_0jqt5")

[connection signal="body_entered" from="VisionCone" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="VisionCone" to="." method="_on_area_2d_body_exited"]
[connection signal="body_entered" from="Hurtbox" to="." method="_on_hurtbox_body_entered"]
